--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                     </details>
                 </div>
 
-                <p class="copyright">© 2026 dbucha-opinie.pl - Opinie o DBUCHA.com</p>
+                <p class="copyright">© 2026 opiniedbucha.pl - Opinie o DBUCHA.com</p>
             </div>
         </div>
     </footer>
