--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
 
                     <div class="stat-card">
                         <div class="stat-value">127</div>
-                        <div class="stat-label">Total Reviews</div>
+                        <div class="stat-label">Wszystkie opinie</div>
                         <div class="stat-trend positive">
                             <i class="fa-solid fa-arrow-trend-up"></i>
-                            +17% z ostatniego miesiąca
+                            +17% od ostatniego miesiąca
                         </div>
                     </div>
 
                     <div class="stat-card">
                         <div class="stat-value">95%</div>
-                        <div class="stat-label">5-Star reviews</div>
+                        <div class="stat-label">Opinie 5-gwiazdkowe</div>
                         <div class="stat-badge excellent">Doskonałe oceny</div>
                     </div>
 
                     <div class="stat-card">
                         <div class="stat-value">4.9</div>
-                        <div class="stat-label">This Month</div>
+                        <div class="stat-label">W tym miesiącu</div>
                         <div class="stat-trend positive">
                             <i class="fa-solid fa-arrow-trend-up"></i>
-                            +0.1 z ostatniego miesiąca
+                            +0.1 od ostatniego miesiąca
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                 <div class="overall-rating-card scroll-reveal">
                     <!-- Left Side - Rating Breakdown -->
                     <div class="rating-breakdown">
-                        <h3 class="breakdown-title">Ratings Breakdown</h3>
+                        <h3 class="breakdown-title">Podział ocen</h3>
                         <div class="breakdown-bars">
                             <div class="breakdown-row">
                                 <span class="breakdown-star">5 <i class="fa-solid fa-star"></i></span>
@@ -170,10 +170,10 @@
                         </div>
 
                         <!-- Category Ratings -->
-                        <h3 class="breakdown-title" style="margin-top: 2rem;">Category Ratings</h3>
+                        <h3 class="breakdown-title" style="margin-top: 2rem;">Oceny kategorii</h3>
                         <div class="category-ratings">
                             <div class="cat-rating-row">
-                                <span class="cat-label">Professionalism</span>
+                                <span class="cat-label">Profesjonalizm</span>
                                 <span class="cat-score">4.9</span>
                                 <div class="cat-stars">
                                     <i class="fa-solid fa-star"></i>
@@ -195,7 +195,7 @@
                                 </div>
                             </div>
                             <div class="cat-rating-row">
-                                <span class="cat-label">Timeliness</span>
+                                <span class="cat-label">Terminowość</span>
                                 <span class="cat-score">4.7</span>
                                 <div class="cat-stars">
                                     <i class="fa-solid fa-star"></i>
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                             <div class="cat-rating-row">
-                                <span class="cat-label">Communication</span>
+                                <span class="cat-label">Komunikacja</span>
                                 <span class="cat-score">4.8</span>
                                 <div class="cat-stars">
                                     <i class="fa-solid fa-star"></i>
@@ -245,10 +245,10 @@
                         <div class="review-header">
                             <div class="avatar">A</div>
                             <div class="review-meta">
-                                <span class="reviewer-name">Adunni Lawson <i
+                                <span class="reviewer-name">Anna Kowalska <i
                                         class="fa-solid fa-circle-check verified-badge"></i></span>
-                                <span class="review-date"><i class="fa-regular fa-calendar"></i> September 12, 2025 • <i
-                                        class="fa-solid fa-location-dot"></i> Ikeja</span>
+                                <span class="review-date"><i class="fa-regular fa-calendar"></i> 4 dni temu • <i
+                                        class="fa-solid fa-location-dot"></i> Warszawa</span>
                             </div>
                             <div class="review-stars">
                                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
@@ -256,17 +256,17 @@
                                     class="fa-solid fa-star"></i>
                             </div>
                         </div>
-                        <div class="review-service-tag">Electrical Installation</div>
+                        <div class="review-service-tag">Jednorazówki MerryMi</div>
                         <div class="review-content">
-                            <p>Oliver did an outstanding job! He arrived on time, was very professional, and completed
-                                the electrical work exactly as requested. The outlets are working perfectly and he
-                                cleaned up after himself. Highly recommend!</p>
+                            <p>Świetny sklep i obsługa! Zamówienie dotarło ekspresowo, wszystko profesjonalnie
+                                zapakowane. Produkty działają idealnie i spełniają moje oczekiwania.
+                                Zdecydowanie polecam!</p>
                         </div>
 
                         <!-- Category Ratings -->
                         <div class="review-categories">
                             <div class="review-cat">
-                                <span class="review-cat-label">Professional</span>
+                                <span class="review-cat-label">Profesjonalizm</span>
                                 <div class="review-cat-stars">
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -276,7 +276,7 @@
                                 </div>
                             </div>
                             <div class="review-cat">
-                                <span class="review-cat-label">Timeliness</span>
+                                <span class="review-cat-label">Terminowość</span>
                                 <div class="review-cat-stars">
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -286,7 +286,7 @@
                                 </div>
                             </div>
                             <div class="review-cat">
-                                <span class="review-cat-label">Quality of work</span>
+                                <span class="review-cat-label">Jakość wykonania</span>
                                 <div class="review-cat-stars">
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -296,7 +296,7 @@
                                 </div>
                             </div>
                             <div class="review-cat">
-                                <span class="review-cat-label">Communication</span>
+                                <span class="review-cat-label">Komunikacja</span>
                                 <div class="review-cat-stars">
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -308,10 +308,10 @@
                         </div>
 
                         <div class="review-footer">
-                            <span class="helpful-count"><i class="fa-regular fa-thumbs-up"></i> 8 people found this
-                                helpful</span>
+                            <span class="helpful-count"><i class="fa-regular fa-thumbs-up"></i> 8 osób uznało to za
+                                pomocne</span>
                             <a href="https://www.dbucha.com/"> <span class="response-link"><i
-                                        class="fa-regular fa-comment-dots"></i> Response</span></a>
+                                        class="fa-regular fa-comment-dots"></i> Odpowiedź</span></a>
                         </div>
                     </article>
 
