--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@
                             <div class="review-meta">
                                 <span class="reviewer-name">Anna Kowalska <i
                                         class="fa-solid fa-circle-check verified-badge"></i></span>
-                                <span class="review-date"><i class="fa-regular fa-calendar"></i> 4 dni temu • <i
-                                        class="fa-solid fa-location-dot"></i> Warszawa</span>
+                                <span class="review-date"> 4 dni temu </span>
                             </div>
                             <div class="review-stars">
                                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
@@ -256,7 +255,7 @@
                                     class="fa-solid fa-star"></i>
                             </div>
                         </div>
-                        <div class="review-service-tag">Jednorazówki MerryMi</div>
+
                         <div class="review-content">
                             <p>Świetny sklep i obsługa! Zamówienie dotarło ekspresowo, wszystko profesjonalnie
                                 zapakowane. Produkty działają idealnie i spełniają moje oczekiwania.
@@ -264,52 +263,10 @@
                         </div>
 
                         <!-- Category Ratings -->
-                        <div class="review-categories">
-                            <div class="review-cat">
-                                <span class="review-cat-label">Profesjonalizm</span>
-                                <div class="review-cat-stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                </div>
-                            </div>
-                            <div class="review-cat">
-                                <span class="review-cat-label">Terminowość</span>
-                                <div class="review-cat-stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                </div>
-                            </div>
-                            <div class="review-cat">
-                                <span class="review-cat-label">Jakość wykonania</span>
-                                <div class="review-cat-stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                </div>
-                            </div>
-                            <div class="review-cat">
-                                <span class="review-cat-label">Komunikacja</span>
-                                <div class="review-cat-stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                </div>
-                            </div>
-                        </div>
+
 
                         <div class="review-footer">
-                            <span class="helpful-count"><i class="fa-regular fa-thumbs-up"></i> 8 osób uznało to za
-                                pomocne</span>
+
                             <a href="https://www.dbucha.com/"> <span class="response-link"><i
                                         class="fa-regular fa-comment-dots"></i> Odpowiedź</span></a>
                         </div>
