--- a/index.html
+++ b/index.html
@@ -403,15 +403,14 @@
                 </div>
 
                 <div class="footer-col">
-                    <h4>Produkty</h4>
+                    <h4>Media społecznościowe</h4>
                     <ul class="footer-links">
-                        <li><a href="https://www.dbucha.com/collections/fumot">Fumot Leopard 40K</a></li>
-                        <li><a href="https://www.dbucha.com/products/jednorazowki-merrymi-panda-x-40k-buchow">MerryMi
-                                Panda X 40K</a></li>
-                        <li><a href="https://www.dbucha.com/products/fumot-tornado-30k-music-30k-buchow">Fumot Tornado
-                                30K Music</a></li>
-                        <li><a href="https://www.dbucha.com/products/jednorazowki-jnr-megabox-pro-50k-buchow">JNR
-                                Megabox Pro 50K</a></li>
+                        <li><a href="https://www.tiktok.com/@dbucha.com" target="_blank"><i
+                                    class="fa-brands fa-tiktok"></i> TikTok</a></li>
+                        <li><a href="https://www.facebook.com/people/Dbuchacom/61578129732195/" target="_blank"><i
+                                    class="fa-brands fa-facebook"></i> Facebook</a></li>
+                        <li><a href="https://www.instagram.com/dbucha.com_sklep/?igsh=MTJlaXloMm82NjIyeA%3D%3D"
+                                target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
                     </ul>
                 </div>
 
